<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Country Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_name"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Host Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddns_host_name"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_host_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- IP Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Port -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Protocol -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Speed -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Ping -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ping"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_ping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- VPN Sessions -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vpn_sessions"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_vpn_sessions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Uptime -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uptime"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_uptime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Total Users -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_users"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_total_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Total Traffic -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_traffic"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_total_traffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Logging Policy -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logging_policy"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_logging_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Operator's Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/details_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator_name"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_operator_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Operator's Message -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operator_message"
                android:textColor="@color/primaryText" />

            <TextView
                android:id="@+id/tv_operator_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/secondaryText"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
